# monitax

./: Dockerfile  README.md  deployment.yaml  docker-compose.debug.yml  docker-compose.yml  env.dev  env.example  init.sh  monitax.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 2022062217_init_9e1885ce6eee.py  2022062633_init_3abf0c596980.py  2022070939_init_381a91379b95.py  2022070941_add_attribute_phone_no_83c1e7b8fc9a.py  2022071128_init_a7f02e95260d.py  2022072529_user_add_verified_attribute_9ae541a7d248.py  2022072543_user_verified_field_default_false_5a8df7bfecfb.py
app/: initial_data.py  main.py  worker.py
app/api/: api.py  deps.py
app/api/endpoints/: auth.py  devices.py  invoices.py  tasks.py  users.py
app/core/: config.py  security.py  session.py  utils.py
app/email-templates/src/: new_account.mjml
app/email-templates/tmpl/: new_account.html  reset_password.html
app/models/: model.py
app/schemas/: requests.py  responses.py
app/static/: welcome.html
app/utils/: invnum_generator.py
