[tool.poetry]
name = "monitax"
version = "0.1.0"
description = "Tax Monitoring"
authors = ["ekalaya2015 <ekalaya2015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.17.6"
celery = {extras = ["redis"], version = "^5.2.7"}
flower = {extras = ["redis"], version = "^1.0.0"}
asyncpg = "^0.25.0"
black = "^22.3.0"
autoflake = "^1.4"
flake8 = "^4.0.1"
httpx = "^0.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
alembic = "^1.8.0"
toml = "^0.10.2"
PyJWT = {extras = ["crypto"], version = "^2.4.0"}
pathlib = "^1.0.1"
python-multipart = "^0.0.5"
gunicorn = "^20.1.0"
emails = "^0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
